# SaffatHasan.github.io

./: .gitignore  .gitlab-ci.yml  CNAME  Dockerfile  Makefile  README.md  index.html  mcdowellcv.cls  pyproject.toml  resume-simple.aux  resume-simple.out  resume-simple.tex  resume.tex
.github/workflows/: build.yml  pylint.yml
archive/: main.tex  mcdowellcv.cls
data/: main.tex  mcdowell.cls
docs/: build.md
publish/: index.html
resources/: data.yml  response.md
resume/: main.py
src/: main.py
templates/: resume-simple.tex  resume.tex
terraform/: s3.tf
test/: requirements.txt
tests/: test_resume.py
