[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Saffat Hasan <saffathasan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pdflatex = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
