[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Saffat Hasan <saffathasan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pdflatex = "^0.1.3"
jinja2 = "^2.11.2"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
